# dashboard_demo

./: README.md  dash.py  layout.typ  main.py  pyproject.toml  report.typ
figures/: kpis.typ
